--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@react-pdf/renderer": "^4.1.6",
     "@testing-library/react": "^16.1.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
